# coinche-cli

./: .coverage  .gitignore  AGENTS.md  CONTRIBUTING.md  PROTOCOL.md  README.md  demo_table.py  pyproject.toml  requirements.txt
.agent-workspace/: knowledge-base.md
.agent-workspace/coinche-network-game/: context-map.md  discoveries.md  plan.md  pullrequest.md  status.md
.github/: pull_request_template.md
.github/workflows/: ci.yml
coinche/: __init__.py  cards.py  client.py  game.py  protocol.py  rules.py  server.py  session_state.py  table.py  ui.py
coinche/web/: __init__.py  messages.py  server.py
coinche/web/static/: app.js  index.html  styles.css
tests/: test_cards.py  test_client_lobby.py  test_game.py  test_integration.py  test_rules.py  test_session_state.py  test_table.py  test_ui.py  test_web_bridge.py
